--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ allprojects {
 	}
 
 	dependencies {
-		compile 'org.springframework.security:spring-security-core:4.1.3.RELEASE'
+		compile 'com.google.guava:guava:20.0'
 		testCompile 'junit:junit:4.12'
 	}
 }
